2002-05-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message-partial.c: New class to handle MIME parts with a
	content-type of message/partial.

	* gmime.c (g_mime_init): Register the message/partial class.

	* gmime-object.c (g_mime_object_new_type): If we fail to find an
	appropriate mime object class, try falling back to the */*
	handler. Only if that fails do we return NULL.

2002-05-08  Jeffrey Stedfast  <fejj@ximian.com>

	* Makefile.am: Added gmime-stream-cat.c to the build.

	* gmime-stream-cat.c: New stream that acts similar to the Unix
	`cat` command by concatenating multiple streams.

2002-05-07  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-fs.c (stream_write): Do more error handling and
	also try to write out everything.

2002-05-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c (main): Generate the multibyte charsets without
	the need for using external .dat files. Also attempt to condense
	the charset-map table a bit.

	* gen-multibyte.c: Removed.

2002-04-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c (main): Instead of converting the multibyte
	charset tables to UTF-8 and then using the unicode functions to
	convert UTF-8 to UCS4, just convert directly to UCS4. Also fixed a
	type-o in the Big5.dat filename (it should be Big5.dat not
	Big5.data).

2002-04-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_fill): Try to align the end of our
	left-over buffer with realbuf + SCAN_HEAD so that we avoid: 1)
	completely filling the prespace or 2) reading more than SCAN_BUF
	bytes per read() call.

2002-04-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (g_mime_utils_base64_decode_step): Only backtrack
	if we have output data.

2002-04-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (rfc2047_encode_phrase): Fixed a small memory
	leak. Thanks to the Pan guys for finding this.

2002-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_step_from): Fixes to make it work.